Fix application properties update078